frontend_tests/negative/excluded_generics/cmd/app/main.go
package main

func identity[T any](value T) T { return value }
func main()                     {}
